--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
     max-height: 756px;
     position: relative;
     background-color: #F2F2F2;
+    display: flex;
     /* выше установили ограничения для секции */
 }
 
@@ -29,40 +30,37 @@
     top: 30px;
 }
 
-.header__title {
-    position: absolute;
-    display: flex;
-    top: 200px;
-    left: 64px;
-    width: 730px;
-    z-index: 26;
+.logo:hover {
+    border: 2px #2F80ED solid;
 }
 
-h1 {
+.header__title {
+    margin: auto;
+    width: 730px;
+    z-index: 26;
+    margin-left: 64px;
     line-height: 96px;
     font-size: 102px;
-    font-style: bold;
+    font-weight: bold;
 }
 
 .header__subtitle {
     position: absolute;
     left: 64px;
     bottom: 30px;
-    width: 500px;
+    width: 388px;
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
 }
 
 .header__link {
-    position: absolute;
-    top: 65px;
-    left: 70px;
     text-decoration: none;
     color: #2F80ED;
 }
 
-h3 {
-    line-height: 25px;
-    font-size: 18px;
-    font-style: normal;
+.header__link:hover {
+    font-weight: bold;
 }
 
 .header__main-illustration {
@@ -74,7 +72,7 @@ h3 {
     z-index: 1;
 }
 
-.header__main-illustration img {
+.header__main-illustration {
     width: 765px;
     height: 608px;
 }
@@ -99,15 +97,16 @@ h3 {
     flex-direction: row;
     justify-content: space-between;
     margin-left: 155px;
+    width: 80%;
 }
 
-.two-columns__brief p {
+.two-columns__brief {
     flex-direction: row;
-    display: block;
     color: #2F80ED;
     line-height: 1.2;
     font-size: 18px;
-    font-style: normal;
+    font-weight: normal;
+    width: 175px;
 }
 
 .two-columns__paragraph .two-columns__paragraph:last-of-type {
@@ -116,18 +115,23 @@ h3 {
 
 .two-columns__main-text {
     width: 80%;
-    min-width: 784px;
+    
 }
 
 .two-columns__paragraph {
     margin-bottom: 30px;
     line-height: 34px;
     font-size: 24px;
-    font-style: normal;
+    font-weight: normal;
+    width: 1020px;
 }
 
 .two-columns__paragraph:last-of-type {
     margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+    font-weight: bold;
 }
 
 .digits {
@@ -138,24 +142,22 @@ h3 {
     width: 60%;
     margin: auto;
     margin-bottom: 20px;
-}
-
-h2 {
     font-size: 60px;
-    font-style: bold;
+    font-weight: bold;
     text-align: center;
     line-height: 69px;  
 }
 
 .section-subtitle {
     width: 60%;
+    text-align: center;
     margin: auto;
 }
 
-.section-subtitle p {
+.section-subtitle {
     line-height: 34px;
     font-size: 24px;
-    font-style: normal;
+    font-weight: normal;
     text-align: center;
 }
 
@@ -181,21 +183,20 @@ h2 {
 .table__heading {
     line-height: 1.15px;
     font-size: 24px;
-    font-style: bold;
+    font-weight: bold;
     margin-bottom: 20px;
 }
 
 .table__text {
     line-height: 1.2;
     font-size: 18px;
-    font-style: normal;
+    font-weight: normal;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
     width: 200px;
     color: white;
-    margin-right: 0;
     margin-top: 80px;
 }
 
@@ -209,10 +210,10 @@ h2 {
     position: relative;
 }
 
-h5 {
+.feinman__title {
     line-height: 1.15;
     font-size: 120px;
-    font-style: bold;
+    font-weight: bold;
     margin: auto;
     text-align: center;
     vertical-align: middle;
@@ -224,7 +225,7 @@ h5 {
 .feinman__subtitle {
     line-height: 51px;
     font-size: 36px;
-    font-style: normal;
+    font-weight: normal;
     text-align: center;
 }
 
@@ -234,15 +235,20 @@ h5 {
     right: 48px;
     line-height: 51px;
     font-size: 36px;
-    font-style: normal;
+    font-weight: normal;
     text-decoration: none;
     color: #1F1F1F;
+}
+
+.feinman__link:hover {
+    color: #2F80ED;
+    font-weight: bold;
 }
 
 .kaufman {
     padding-top: 90px;
     padding-bottom: 90px;
-    background-color: #000000;
+    background-color: #1F1F1F;
     position: relative;
     overflow: hidden;
 }
@@ -252,7 +258,7 @@ h5 {
     width: 60%;
     font-size: 60px;
     line-height: 69px;
-    font-style: bold;
+    font-weight: bold;
     color: white;
 }
 
@@ -260,7 +266,7 @@ h5 {
     text-align: center;
     line-height: 34px;
     font-size: 24px;
-    font-style: normal;
+    font-weight: normal;
     color: white;
 }
 
@@ -279,106 +285,94 @@ h5 {
 }
 
 .footer {
-    background-color: #000000;
-    min-height: 350px;
+    background-color: #1F1F1F;
+    min-height: 290px;
     color: white;
     padding-top: 60px;
 }
 
 .logo_place_footer {
     height: 35px;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: static;
 }
 
 .footer__columns {
     width: 90%;
     flex-basis: 711px;
     margin: 0 auto;
-    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 250px;
+}
+
+.footer__column-content_copyright {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-basis: 711px;
+    width: 90%;
 }
 
 .footer__author {
-    position: absolute;
-    left: 0;
     padding-top: 18px;
     padding-bottom: 18px;
-    bottom: 0;
-    
-}
-
-.footer__author span {
     line-height: 25px;
     font-size: 18px;
-    font-style: normal;
-    vertical-align: middle;
-}
-
-.footer__column-heading span {
-    line-height: 30px;
-    font-size: 18px;
-    font-style: bold;
-    color: white;
+    font-weight: normal;
 }
 
 .footer__column-heading {
-    position: absolute;
-    top: 0;
-    left: 359px;
-}
-
-.footer__column-links a {
-    text-decoration: none;
-    color: white;
+    width: 200px;
     line-height: 30px;
     font-size: 18px;
-    font-style: normal;
+    font-weight: bold;
+    color: white;
+    margin: 0;
+    padding: 0;
 }
 
-.footer__column_info {
-    position: absolute;
-    top: 0;
-    left: 0;
+.footer__column-content_info {
+    display: flex;
+    flex-direction: column;
 }
 
 .footer__column-links {
+    text-decoration: none;
+    color: white;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+    list-style-type: none;
+    margin-left: -19px;
+}
+
+.footer__column-links:last-of-type {
+    margin-bottom: 90px;
+}
+
+.footer__column-links:hover {
+    font-weight: bold;
+    color: #2F80ED;
+}
+
+
+.footer__column-content_social {
     display: flex;
     flex-direction: column;
-    text-align: left;
-    position: absolute;
-    top: 50px;
-    left: 359px;
+    border: 1px red solid;
 }
 
-.footer__column_content_social {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.p {
-    line-height: 30px;
-    font-size: 18px;
-    font-style: bold;
-    color: white;
-}
-
-.footer__column_content_social span {
-    line-height: 30px;
-    font-size: 18px;
-    font-style: bold;
-    color: white;
-}
-
-.footer__social-icon:first-of-type {
-    margin-top: 20px;
-}
-
-.footer__social-icon a {
+.footer__social-icon {
     text-decoration: none;
+    list-style-type: none;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    margin-left: -19px;
+}
+
+.footer__social-icon:hover {
+    font-weight: bold;
+    color: #2F80ED;
 }
