--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,9 +1,7 @@
 .video__iframes {
     padding-top: 50px;
     display: flex;
-    width: 1050px;
     flex-direction: row;
-    margin: auto;
-    justify-content: space-between;
+    justify-content: center;
   }
 
