--- a/blocks/technics/cards/__image/cards__image.css
+++ b/blocks/technics/cards/__image/cards__image.css
@@ -3,5 +3,5 @@
     border-radius: 50%;
     width: 160px;
     height: 160px;
-    padding: 60px 40px 43px 40px;
+    margin: 60px 40px 43px 40px;
   }
