--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,3 +1,17 @@
+.video__iframe {
+  border: 0;
+  width: 515px;
+  height: 316px;
+}
+
+.video__iframe:nth-of-type(1) {
+  margin-right: 10px;
+}
+
+.video__iframe:nth-of-type(2) {
+  margin-left: 10px;
+}
+
 .video__iframe:hover {
     opacity: .5;
     transition: .3s;
