--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,7 +1,7 @@
 
 @keyframes rotation {
   from {
-    transform: rotate(0);
+    transform: rotate(-15deg);
   }
   to {
     transform: rotate(360deg);
