--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url(./normalize.css);
+@import url(./styles/normalize.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/description/description.css);
 @import url(./blocks/digits/digits.css);
