--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -1,6 +1,6 @@
 
 .footer__column-heading {
-    width: 200px;
+    max-width: 200px;
     line-height: 30px;
     font-size: 18px;
     font-weight: bold;
