--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,6 +1,6 @@
 .footer__columns {
     width: 90%;
-    /*min-height: 350px;*/
+    min-height: 350px;
     flex-basis: 711px;
     margin: 0 auto;
     display: flex;
