--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 765px;
+    max-width: 765px;
     height: 608px;
     z-index: 1;
 }
