--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -16,5 +16,5 @@
     top: 64px;
     right: 0;
     transform: rotate(-15deg);
-    animation: rotation 20s ease infinite;
+    animation: rotation 20s linear infinite;
 }
