--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -14,5 +14,5 @@
     top: 0;
     right: -210px;
     z-index: 0;
-    animation: rotation 20s ease infinite;
+    animation: rotation 20s linear infinite;
 }
