--- a/blocks/kaufman/table/table.css
+++ b/blocks/kaufman/table/table.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 1100px;
+    max-width: 1100px;
     margin: auto;
     flex-wrap: wrap;
     position: relative;
