--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -1,6 +1,6 @@
 .khan__quote {
     margin-top: 50px;
-    width: 790px;
+    max-width: 790px;
     margin-bottom: 36px;
     line-height: 34px;
     font-size: 24px;
