--- a/blocks/technics/cards/cards.css
+++ b/blocks/technics/cards/cards.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 920px;
+    max-width: 920px;
     margin: auto;
     flex-wrap: wrap;
   }
