--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,13 +1,4 @@
 
-@keyframes rotation {
-  from {
-    transform: rotate(-15deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .header__square-pic {
     height: 568px;
     width: 568px;
@@ -16,5 +7,6 @@
     top: 64px;
     right: 0;
     transform: rotate(-15deg);
-    animation: rotation 20s linear infinite;
+    animation: rotation1 20s linear infinite;
 }
+
