--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,11 +1,3 @@
-@keyframes rotation {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
 
 .kaufman__triangle {
     position: absolute;
@@ -14,5 +6,5 @@
     top: 0;
     right: -210px;
     z-index: 0;
-    animation: rotation 20s linear infinite;
+    animation: rotation2 20s linear infinite;
 }
