--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,8 +7,8 @@
 .cards {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     max-width: 920px;
-    margin: auto;
+    margin: 0 auto;
     flex-wrap: wrap;
   }
